--- a/style.css
+++ b/style.css
@@ -2,14 +2,6 @@ html{
 	background-color: #F9F4EC;
 	color: #FFF;
 }
-/*@font-face
-{
-	font-family: digitalFont;
-	src: DS-DIGI.TTF;
-}
-num{
-	font-family: digitalFont;
-}*/
 .container{
 	margin-left: auto;
 	margin-right: auto;
@@ -46,7 +38,7 @@ num{
 	width:80%;
 }
 .day{
-	display: inline-block; /*mobile: display: inline-block center;*/
+	display: inline-block;
 	width: 12%;
 	text-align: center;
 }
@@ -63,10 +55,7 @@ num{
 	background-color: #A6C8A3;
 }
 .slider{
-	background-color: #A6C8A3;
 }
 .name-of-day{
 	display: inline-block;
 }
-
-
